[tool.poetry]
name = "titlefy-backend"
version = "0.1.0"
description = ""
authors = ["Topias Harjunpää <topias.harjunpaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
Flask = "^3.0.0"
Flask-Cors = "^4.0.0"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
